# youtube-summarizer-ui

./: .dockerignore  .env.example  .env_example  .gitignore  .railwayignore.backend  .railwayignore.frontend  DEPLOYMENT-STEP-BY-STEP.md  DEPLOYMENT.md  README.md  SETUP.md  app.py  index.html  nixpacks.backend.toml  nixpacks.frontend.toml  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  setup-backend.sh  setup-frontend.sh  start.sh  stop.sh  tailwind.config.ts  vite.config.ts
.github/workflows/: deploy-pages.yml  extension-release.yml
backend/: __init__.py  summarizer.py  transcriber.py  utils.py  youtube_loader.py
chrome-extension/: .gitignore  README.md  background.js  content.css  content.js  manifest.json  sidepanel.html  sidepanel.js
frontend/: vite.config.ts
frontend/src/components/: VideoInfo.tsx
frontend/src/services/: api.ts
scripts/: README.md  package-extension.mjs  update-example-data.js  update-example-data.sh
src/: App.tsx  index.css  main.tsx
src/components/: AnalysisPanel.tsx  ErrorDisplay.tsx  ExampleUrls.tsx  HeroSection.tsx  ModelSelector.tsx  ProcessLogs.tsx  ProcessingStatus.tsx  ProcessingTimeline.tsx  SummaryPanel.tsx  ThemeToggle.tsx  TranscriptPanel.tsx  VideoInfo.tsx  VideoProcessingOptions.tsx  VideoUrlForm.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  (+23 more)
src/hooks/: use-config.ts  use-mobile.tsx  use-toast.ts  use-video-processing.ts
src/lib/: cookie-utils.ts  date-utils.ts  example-data-loader.ts  form-validation.ts  markdown-utils.ts  provider-logos.ts  url-utils.ts  utils.ts  video-utils.ts
src/pages/: Index.tsx  NotFound.tsx
src/services/: api-client.ts  api-errors.ts  api-request.ts  api-streaming.ts  api-types.ts  api-utils.ts  api.ts  config.ts  example-data.ts  streaming.ts  types.ts
