[project]
name = "youtube-summarizer"
version = "0.1.0"
description = "Standalone YouTube processing API with transcription and AI summarization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl_cffi<0.7",
    "eventlet<0.36",
    "fal-client>=0.6.0",
    "fastapi>=0.115.12",
    "google-genai>=0.4.0",
    "langchain>=0.3.25",
    "langchain-core>=0.3.15",
    "langchain-openai>=0.2.8",
    "opencc>=1.1.7",
    "pydantic>=2.5.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "trio<0.26",
    "uvicorn>=0.34.3",
    "yt-dlp>=2024.8.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["youtube_summarizer"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
